<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.corelibrary.view.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/modify_tel"
        app:lefticon="@drawable/btn_back"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/font_color_two">
        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_head"
            android:layout_marginTop="@dimen/dd_dimen_50px"
            android:layout_marginBottom="@dimen/dd_dimen_40px"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/ll_username"
            style="@style/layout_input"
            android:layout_below="@id/iv_icon">
            <TextView
                style="@style/tv_input_name"
                android:text="@string/tel_number"/>

            <EditText
                android:id="@+id/et_username"
                style="@style/et_input_value"
                android:hint="@string/hint_input_tel"/>
        </LinearLayout>

        <View
            android:id="@+id/v_line1"
            android:layout_width="match_parent"
            style="@style/line_hor1"
            android:layout_below="@id/ll_username"/>

        <LinearLayout
            android:id="@+id/ll_verify_code"
            style="@style/layout_input"
            android:layout_below="@id/v_line1">
            <TextView
                style="@style/tv_input_name"
                android:text="@string/verify_code"/>

            <EditText
                android:id="@+id/et_verify_code"
                style="@style/et_input_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/hint_input_verify_code"/>

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_verify_code"
                android:textSize="@dimen/font_size_four"
                android:textColor="@color/font_color_three"
                android:singleLine="true"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/btn_style"
            android:text="@string/save"
            android:layout_marginLeft="@dimen/dd_dimen_60px"
            android:layout_marginRight="@dimen/dd_dimen_60px"
            android:layout_below="@id/ll_verify_code"
            android:layout_marginTop="@dimen/dd_dimen_60px"/>

    </RelativeLayout>

</LinearLayout>