<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_color_two">

    <com.corelibrary.view.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/conservation_query"
        app:lefticon="@drawable/btn_back"
        app:righttext="@string/add"/>

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.corelibrary.view.MeasureListView
                android:id="@+id/lv_conversation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="@dimen/dd_dimen_2px"
                android:divider="@null"
                android:layout_marginTop="@dimen/dd_dimen_60px"/>

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dd_dimen_40px"
                android:textColor="@color/font_color_three"
                android:text="@string/click_clear"
                android:gravity="center"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_query"
                style="@style/btn_style"
                android:text="@string/query"
                android:layout_marginLeft="@dimen/dd_dimen_60px"
                android:layout_marginRight="@dimen/dd_dimen_60px"
                android:layout_marginTop="@dimen/dd_dimen_60px"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>