<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.corelibrary.view.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:lefticon="@drawable/btn_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/font_color_two"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_head"
            android:layout_marginTop="@dimen/dd_dimen_50px"
            android:layout_marginBottom="@dimen/dd_dimen_40px"
            android:layout_gravity="center_horizontal"
            />

        <View
            android:layout_width="match_parent"
            style="@style/line_hor3"/>

        <LinearLayout
            android:id="@+id/ll_feedback"
            style="@style/setting_ll_item">
            <TextView
                style="@style/mine_ll_item_txt"
                android:text="@string/feedback"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arror_right"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            style="@style/line_hor3"/>

        <LinearLayout
            android:id="@+id/ll_service"
            style="@style/setting_ll_item">
            <TextView
                style="@style/mine_ll_item_txt"
                android:text="@string/service_term"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arror_right"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            style="@style/line_hor3"/>

        <LinearLayout
            android:id="@+id/ll_about_us"
            style="@style/setting_ll_item">
            <TextView
                style="@style/mine_ll_item_txt"
                android:text="@string/about_us"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arror_right"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            style="@style/line_hor3"/>

        <Button
            android:id="@+id/btn_logout"
            style="@style/btn_style"
            android:text="@string/logout"
            android:layout_marginLeft="@dimen/dd_dimen_60px"
            android:layout_marginRight="@dimen/dd_dimen_60px"
            android:layout_marginTop="@dimen/dd_dimen_60px"/>

    </LinearLayout>

</LinearLayout>